# ChatRoom

./: CMakeLists.txt  ChatBackend.h  chatRoom.qml  chatRoom.qmlproject  qmlmodules
content/: App.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/chatRoom/: CMakeLists.txt  qmldir
imports/chatRoom/designer/: plugin.metainfo
include/: ClientController.hpp  ClientManager.hpp  Message.hpp  Peer.hpp  Room.hpp  RpcClient.hpp  ServerManager.hpp
src/: CMakeLists.txt  import_qml_plugins.h
src/Controllers/: ClientController.cpp
src/Entity/: Message.cpp  Peer.cpp  Room.cpp
src/Managers/: ClientManager.cpp  ServerManager.cpp
